# atomikwiz

./: .gitignore  pyproject.toml
data/: .gitignore  sample_quiz.txt
src/atomikwiz/: __init__.py  __main__.py  cli.py  common.py
templates/: base.html  end.html  questions.html  start.html
