[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atomikwiz"
version = "0.0.0"
dynamic = ["dependencies"]

[project.scripts]
atomikwiz = "atomikwiz.__main__:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.flake8]
max-line-length = 99
